--- a/list.html
+++ b/list.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
         <mata charset="utf-8">
-        <title>과제1</title>>
+        <title>과제</title>>
     </head>
     <body>
         <div class="container">
@@ -14,7 +14,16 @@
 
                 <div class="bg-warning">          <h1>"  web service  "</h1></div> <br><br>
         <h3>나의 메모장</h3><br>
-        <h4> 저의 웹페이지는 '나의 일기장' 입니다. <br> 일기장 같이 자신이 기록해 놓은 것들을 모아 볼 수 있는 공간입니다. <br> 기록은 일기가 될수도, 지식이 될 수도 있죠. <br> 나만 보는 네이버 블로그라고 생각하면 맞습니다.</h4>
+        <h4> 
+             저의 웹페이지는 '나의 일기장' 입니다. 
+        <br> 일기장 같이 자신이 기록해 놓은 것들을 모아 볼 수 있는 공간입니다.
+        <br> 기록은 일기가 될수도, 지식이 될 수도 있죠. 
+        <br> 나만 보는 네이버 블로그라고 생각하면 맞습니다. <br>
+        <br> 추가해야 할 항목은, 회원가입과 로그인 시 페이지 이동 및 데이터베이스 적용 부분입니다.
+        <br> 기본페이지 설정링크를 제작하고, 이에따라 구조가 정해지도록 만들고 싶습니다.
+        <br> 기본 배너의 디자인도 손보고 원래 이번 과제 때, 더 진행했어야 하지만 개인적인 시간상의 문제로 성과를 내지 못했습니다.
+        <br> 다음 과제 때 더 분발하도록 하겠습니다
+        </h4>
         </div>
         </body>
     </form>
