--- a/index.html
+++ b/index.html
@@ -6,16 +6,21 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
         <mata charset="utf-8">
-        <title>과제1</title>
+        <title>과제</title>
     </head>
     <body>
         <br><br><br><br><br><br><br>
         <div class="container">
+            <h3> " 다이어리. "</h3>
+
+            <br>
             <form action="b.html">
                 <button type="submit" class="btn btn-warning">로그인</button></form>
                    <br><br> 
-                <form action="c.html">
+                <form action="login.html">
                 <button type="submit" class="btn btn-warning">회원가입</button></form>
-                    
+                <form action="회원가입.html"></form>
+            <br>
+                <h6>처음 오셨다면 회원가입을 눌러주세요</h6>
     </body>
 </html>
