--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
         <mata charset="utf-8">
-        <title>과제</title>
+        <title>과제1</title>
     </head>
     <body>
         <br><br><br><br><br><br><br>
