과제_2 마지막

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
             <h3> " 다이어리. "</h3>
 
             <br>
-            <form action="b.html">
-                <button type="submit" class="btn btn-warning">로그인</button></form>
-                   <br><br> 
-                <form action="login.html">
+            <form action="login.html">
+            <button type="submit" class="btn btn-warning">로그인</button></form>
+            <br><br> 
+
+            <form action="회원가입.html">
                 <button type="submit" class="btn btn-warning">회원가입</button></form>
-                <form action="회원가입.html"></form>
+
             <br>
                 <h6>처음 오셨다면 회원가입을 눌러주세요</h6>
     </body>
